--- a/config/kyria_rev2_left.conf
+++ b/config/kyria_rev2_left.conf
@@ -13,6 +13,10 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
 # Mouse Keys Support
 CONFIG_ZMK_POINTING=y
