--- a/config/kyria_rev2_left.conf
+++ b/config/kyria_rev2_left.conf
@@ -1,8 +1,3 @@
-# Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-# Uncomment the following line to enable the Kyria OLED Display
 # Display config
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
@@ -10,7 +5,7 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WPM=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
-# Uncomment the following lines to enable RGB underglow
+# RGB underglow config
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
